--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 :root {
 	font-family: 'Nunito', sans-serif;
 	--headerheight: 10vh;
+	--sidebarwidth: 20vw;
 	--lightergrey: rgb(229,229,229);
 }
 * {
@@ -39,7 +40,7 @@ ul.no-style a {
 }
 .sidebar {
 	position:fixed;
-	width: 20vw;
+	width: var(--sidebarwidth);
 	height: 100vh;
 	top: var(--headerheight);
 }
@@ -81,4 +82,9 @@ ul.no-style a {
 	-webkit-font-smoothing: antialiased;
 	pointer-events: none;
 	margin-right: 5px;
+}
+#content {
+	height: calc( 100vh - var(--headerheight) );
+	width: calc( 100vw - var(--sidebarwidth) );
+	left: var(--sidebarwidth);
 }
