--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ ul.no-style a {
 	margin-right: 5px;
 }
 #content {
-	height: calc( 100vh - var(--headerheight) );
-	width: calc( 100vw - var(--sidebarwidth) );
+	position: absolute;
+	width: calc( 100vw - var(--sidebarwidth) - var(--sidebarwidth) );
 	left: var(--sidebarwidth);
 }
