--- a/style.css
+++ b/style.css
@@ -84,6 +84,7 @@ ul.no-style a {
 	margin-right: 5px;
 }
 #content {
+	padding: 10px;
 	position: absolute;
 	width: calc( 100vw - var(--sidebarwidth) - var(--sidebarwidth) );
 	left: var(--sidebarwidth);
