--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Nunito&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300&family=Montserrat:wght@500&display=swap');
 :root {
-	font-family: 'Nunito', sans-serif;
+	font-family: 'Inter', sans-serif;
 	--headerheight: 10vh;
 	--sidebarwidth: 20vw;
 	--lightergrey: rgb(229,229,229);
