--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ ul.no-style a {
 	text-decoration: none;
 	color: black;
 	border-radius: 5px;
+	padding: 10px;
 }
 .nav-list a:hover {
 	background-color: var(--lightergrey);
